# hedera-ledger-app

./: Makefile  pyproject.toml
proto/: BasicTypes.proto  CryptoTransferTransactionBody.proto  TokenAssociateBody.proto  TransactionBody.proto
src/: globals.h  hedera.c  hedera.h  sign_transaction.c  sign_transaction.h
